--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>My second github repo</title>
 </head>
 <body>
+  <h1>I can push to github</h1>
+  <h2>I can do it smoothly  </h2>
+  <h3>New code changed</h3>
+
     
 </body>
 </html>
