--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <h3>New code changed</h3>
   <p>More paragraph. More paragraph. More paragraph.More paragraph. More paragraph. More paragraph.More paragraph. More paragraph. More paragraph.More paragraph. More paragraph. More paragraph.</p>
   <h1> munna called me</h1>
+  <img src="ariana.jpg" alt="">
 
     
 </body>
